add order table to dashboard

--- a/test.html
+++ b/test.html
@@ -1,455 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div
-      class="rcontainerns nodelete col rbody padside"
-
-    >
-      <script src="js/jq/jquery.js?v=1"></script>
-      <script src="js/jq/jqueryui.js?v=1"></script>
-      <script src="js/jq/jquerytouch.min.js?v=1"></script>
-      <script
-        type="text/javascript"
-        src="jquery/js/jquery.cookie.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/bootstrap/js/bootstrap.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="js/jq/jquery.smartmenus.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/metrouicss/build/js/metro.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/uikit2.22/js/uikit.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/uikit2.22/js/components/sticky.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/uikit2.22/select2.min.js?v=1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="framework/uikit2.22/js/components/parallax.min.js?v=1"
-      ></script>
-      <script
-        src="classjs/lightbox/jquery.prettyPhoto.js?v=2"
-        type="text/javascript"
-        charset="utf-8"
-      ></script>
-
-      <script type="text/javascript" src="/js/jquerybin.js?v=2034"></script>
-      <script>
-        $(document).ready(function () {
-          //Preloader
-          $(window).on("load", function () {
-            preloaderFadeOutTime = 500;
-            function hidePreloader() {
-              var preloader = $(".spinner-wrapper");
-              preloader.fadeOut(preloaderFadeOutTime);
-            }
-            hidePreloader();
-          });
-        });
-      </script>
-
-      <script>
-        $(document).ready(function () {
-          $.fn.isInViewport = function () {
-            var elementTop = $(this).offset().top;
-            var elementBottom = elementTop + $(this).outerHeight();
-            var viewportTop = $(window).scrollTop();
-            var viewportBottom = viewportTop + $(window).height();
-            return elementBottom > viewportTop && elementTop < viewportBottom;
-          };
-
-          $("img,iframe,input").each(function () {
-            if ($(this).isInViewport()) {
-              var vsrc = $(this).attr("src");
-              var dsrc = $(this).attr("data-src");
-
-              if (vsrc != dsrc && dsrc !== undefined && dsrc != "")
-                $(this).attr("src", dsrc);
-            }
-          });
-
-          $(window).on("resize scroll", function () {
-            $("img,iframe,input").each(function () {
-              if ($(this).isInViewport()) {
-                var vsrc = $(this).attr("src");
-                var dsrc = $(this).attr("data-src");
-                if (vsrc != dsrc && dsrc !== undefined && dsrc != "")
-                  $(this).attr("src", dsrc);
-              }
-            });
-          });
-
-          var vwidth = screen.width * 1;
-          var bwidth = screen.width + "px";
-          if (vwidth < 650) {
-            $(".table td, .uk-table td").attr("nowrap", "nowrap");
-            $(".table, .uk-table").wrap("<div class='table-responsive'></div>");
-            $(".table, .uk-table")
-              .parents("div")
-              .attr("style", "width: " + bwidth + " !important");
-          }
-        });
-      </script>
-      <script>
-        $.fn.prettyPhoto();
-
-        $.ajaxPrefilter(function (options, original_Options, jqXHR) {
-          options.async = true;
-        });
-        $(document).ready(function () {
-          $("a[target^='lightbox']").prettyPhoto();
-
-          $(".col:empty").html("<div></div>");
-
-          $("img").attr("loading", "lazy");
-
-          var mykeywords = $(".mykeywords").attr("content");
-          $("meta[name='keywords']").attr("content", mykeywords);
-
-          var mydescription = $(".mydescription").attr("content");
-          $("meta[name='description']").attr("content", mydescription);
-
-          var mytitle = $(".mytitle").attr("content");
-          $("title").text(mytitle);
-
-          $(window).load(function () {
-            $("body").append("<A NAME='bottom'>");
-
-            $("#header__icon").click(function (e) {
-              e.preventDefault();
-              $("body").toggleClass("with--sidebar");
-            });
-
-            $("#site-cache").click(function (e) {
-              $("body").removeClass("with--sidebar");
-            });
-
-            $("body")
-              .find("a[target^='lightbox']")
-              .each(function () {
-                var url = $(this).attr("href");
-                url = getpopurl(url);
-                $(this).attr("href", url);
-              });
-
-            if ($.cookie("thtpop") == null) {
-              var date = new Date();
-              var minutes = 1;
-              date.setTime(date.getTime() + minutes * 60 * 5000);
-              $.cookie("thtpop", 0, { expires: date });
-              var url = $("a[target='lightboxpop']").attr("href");
-              var vtitle = $("a[target='lightboxpop']").attr("title");
-              if (url != null) {
-                $.prettyPhoto.open(url, "", vtitle);
-              }
-            }
-          });
-        });
-      </script>
-      <div id="divsc">
-        <div style="width: 100%" id="treediv">
-          <table
-            style="
-              width: 98%;
-              background-color: #ffffff;
-              margin-left: auto;
-              margin-right: auto;
-            "
-            id="treetbl"
-            cellpadding="0"
-            cellspacing="0"
-            border="0"
-          >
-            <tbody>
-                <!-- 1stlevel -->
-              <tr>
-                <td colspan="8">&nbsp;</td>
-                <td colspan="16" class="lb">
-                  <br />[101608 สุระ เรือนสว่าง]
-                </td>
-                <td colspan="8">&nbsp;</td>
-              </tr>
-
-              <tr>
-                <td colspan="8">&nbsp;</td>
-                <td colspan="16" class="ll lr">&nbsp;</td>
-                <td colspan="8">&nbsp;</td>
-              </tr>
-              <!-- 2nd level -->
-              <tr>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="8" class="lb"></td>
-                <td colspan="8">&nbsp;</td>
-                <td colspan="8" class="lb"></td>
-                <td colspan="4">&nbsp;</td>
-              </tr>
-
-              <tr>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="8" class="ll lr">&nbsp;</td>
-                <td colspan="8">&nbsp;</td>
-                <td colspan="8" class="ll lr">&nbsp;</td>
-                <td colspan="4">&nbsp;</td>
-              </tr>
-              
-              <tr>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="4" class="lb"></td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="lb"></td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="lb"></td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-              </tr>
-              <!-- 3rd level -->
-
-
-              <tr>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="4" class="ll lr">&nbsp;</td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="ll lr">&nbsp;</td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="ll lr">&nbsp;</td>
-                <td colspan="4">&nbsp;</td>
-                <td colspan="4" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-              </tr>
-              <!-- 4th level -->
-              <tr class="trset">
-                <td>&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="lb"></td>
-                <td>&nbsp;</td>
-              </tr>
-
-              <tr>
-                <td>&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td colspan="2">&nbsp;</td>
-                <td colspan="2" class="ll lr">&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-
-              <!-- 5th level -->
-
-              
-              <tr>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> TEST</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> TEST</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> TEST</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> TEST</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> TEST</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                <td colspan="2" class="lb"> test</td>
-                <td colspan="1" >&nbsp;</td>
-                </tr>
-
-                <tr>
-                    <td colspan="1" >&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1">&nbsp;</td>
-                    <td colspan="1" class="ll lr">&nbsp;</td>
-                    <td colspan="1" >&nbsp;</td>
-                  </tr>
-
-
-                  <tr>
-                    <td colspan="1"> TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">TEST</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                    <td colspan="1">test</td>
-                </tr>
-
-              <tr>
-                <td colspan="32"><br /><br /><br /></td>
-              </tr>
-            </tbody>
-          </table>
-
-          <br /><br />
-          <table
-            style="width: 80%"
-            cellspacing="0"
-            cellpadding="0"
-            width="100"
-            border="0"
-          >
-            <tbody>
-              <tr>
-                <td>&nbsp;</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+<div style="width: 100%; height: 100%; position: relative; background: white">
+  <img style="width: 4096px; height: 2505px; left: -1426px; top: -729px; position: absolute" src="https://via.placeholder.com/4096x2505" />
+  <div style="left: 1050px; top: 372px; position: absolute; color: white; font-size: 96px; font-family: Inter; font-weight: 800; word-wrap: break-word">TRUST ISSUES</div>
+  <div style="width: 256px; height: 101px; left: 1373px; top: 542px; position: absolute">
+      <div style="width: 253.71px; height: 101px; left: 2.29px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 25px"></div>
+      <div style="width: 256px; height: 101px; left: 0px; top: 0px; position: absolute; text-align: center; color: #858585; font-size: 48px; font-family: Inter; font-weight: 800; word-wrap: break-word">be one</div>
+  </div>
+  <div style="width: 120px; height: 120px; left: 39px; top: 39px; position: absolute">
+      <div style="width: 120px; height: 120px; left: 0px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
+      <div style="width: 100.52px; height: 100.52px; left: 14.55px; top: 14.55px; position: absolute">
+          <div style="width: 20px; height: 20px; left: 12.73px; top: 12.73px; position: absolute; background: #1E1E1E; border-radius: 9999px"></div>
       </div>
-      <br /><br />
-
-      <style>
-        .trset td {
-          width: 60px !important;
-        }
-        .lb {
-          border-bottom: dashed 1px #c0c0c0;
-        }
-        .ll {
-          border-left: dashed 1px #c0c0c0;
-        }
-        .lr {
-          border-right: dashed 1px #c0c0c0;
-        }
-        .lt {
-          border-top: dashed 1px #c0c0c0;
-        }
-        .nlt {
-          border-top: 0;
-        }
-        td {
-          text-align: center;
-          height: 30px;
-        }
-
-        .anew3 {
-          font-size: 26px !important;
-        }
-        @media screen and (max-width: 650px) {
-          #treediv {
-            width: 320px !important;
-          }
-          #treetbl {
-            width: 700px !important;
-          }
-          #divsc {
-            overflow-x: scroll;
-          }
-        }
-      </style>
-    </div>
-  </body>
-</html>
+  </div>
+  <div style="left: 179px; top: 70px; position: absolute; text-align: center; color: white; font-size: 48px; font-family: Inter; font-weight: 800; word-wrap: break-word">Dog Balls</div>
+</div>
